--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,55 @@
+aiosmtplib==2.0.2
 annotated-types==0.6.0
 anyio==3.7.1
+bcrypt==4.0.1
+blinker==1.6.3
 certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.0
 click==8.1.7
+coverage==7.3.2
+cryptography==41.0.4
+deprecation==2.1.0
 dnspython==2.4.2
-email-validator==2.1.0.post1
-exceptiongroup==1.1.3
-fastapi==0.104.1
+docker==6.1.3
+ecdsa==0.18.0
+email-validator==2.0.0.post2
+fastapi==0.104.0
+fastapi-mail==1.4.1
+greenlet==3.0.0
 h11==0.14.0
 httpcore==0.18.0
 httptools==0.6.1
 httpx==0.25.0
 idna==3.4
-itsdangerous==2.1.2
+iniconfig==2.0.0
 Jinja2==3.1.2
 MarkupSafe==2.1.3
-mypy==1.6.1
-mypy-extensions==1.0.0
-orjson==3.9.10
+packaging==23.2
+passlib==1.7.4
+pluggy==1.3.0
+psycopg2==2.9.9
+pyasn1==0.5.0
+pycparser==2.21
 pydantic==2.4.2
-pydantic-extra-types==2.1.0
 pydantic-settings==2.0.3
 pydantic_core==2.10.1
+pytest==7.4.2
 python-dotenv==1.0.0
-python-multipart==0.0.6
+python-jose==3.3.0
 PyYAML==6.0.1
+requests==2.31.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.22
 starlette==0.27.0
-tomli==2.0.1
+testcontainers==3.7.1
 typing_extensions==4.8.0
-ujson==5.8.0
+urllib3==2.0.7
 uvicorn==0.23.2
-uvloop==0.19.0
+uvloop==0.18.0
 watchfiles==0.21.0
-websockets==12.0
+websocket-client==1.6.4
+websockets==11.0.3
+wrapt==1.15.0
