--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ MarkupSafe==2.1.3
 packaging==23.2
 passlib==1.7.4
 pluggy==1.3.0
+psycopg2-binary==2.9.9
 psycopg2==2.9.9
 pyasn1==0.5.0
 pycparser==2.21
