--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
         container_name: video-service
         links:
             - db
+        env_file:
+            - .env
         ports:
             - "8081:8081"
         volumes:
