--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 annotated-types==0.6.0
 anyio==3.7.1
+beautifulsoup4==4.12.2
+bs4==0.0.1
 certifi==2023.7.22
+charset-normalizer==3.3.2
 click==8.1.7
 dnspython==2.4.2
 email-validator==2.1.0.post1
@@ -24,11 +27,15 @@ pydantic_core==2.10.1
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
+requests==2.31.0
 sniffio==1.3.0
+soupsieve==2.5
 starlette==0.27.0
 tomli==2.0.1
 typing_extensions==4.8.0
 ujson==5.8.0
+Unidecode==1.3.7
+urllib3==2.1.0
 uvicorn==0.23.2
 uvloop==0.19.0
 watchfiles==0.21.0
