--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,49 @@
-version: "3"
-
 services:
-    db:
-        image: "postgres:alpine"
-        container_name: "db"
-        env_file:
-            - .env
-        volumes:
-            - postgres:/var/lib/postgresql/data
+    app:
+        build: .
         ports:
-            - "5432:5432"
-        networks:
-            - simple-network
-
-    api:
-        depends_on:
-            - db
-        build:
-            context: ./
-        container_name: video-service
-        links:
-            - db
-        env_file:
-            - .env
-        ports:
-            - "8081:8081"
+            - 8001:8001
         volumes:
-            - ./:/app
-        networks:
-            - simple-network
+            - .:/app/
+        env_file:
+            - ./.env
         environment:
-            - DEBUG=True
-networks:
-    simple-network:
-        driver: bridge
+            - POSTGRES_HOST=db
+        depends_on:
+            db:
+                condition: service_healthy
+        restart: always
+        networks:
+            - backend_videos
+
+    db:
+        image: postgres
+        volumes:
+            - postgres_data:/var/lib/postgresql/data/
+        expose:
+            - 5432
+        environment:
+            - POSTGRES_HOST=${POSTGRES_HOST}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            - POSTGRES_USER=${POSTGRES_USER}
+            - POSTGRES_DB=${POSTGRES_DB}
+        env_file:
+            - ./.env
+        restart: always
+        networks:
+            - backend_videos
+        healthcheck:
+            test:
+                [
+                    "CMD-SHELL",
+                    "pg_isready -d ${POSTGRES_DB} -U ${POSTGRES_USER}",
+                ]
+            interval: 10s
+            timeout: 5s
+            retries: 5
+
 volumes:
-    postgres:
+    postgres_data:
+
+networks:
+    backend_videos:
