--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
-sonar.projectKey=fga-eps-mds_2023.2-UnB-TV-Admin
 sonar.projectKey=fga-eps-mds_2023.2-UnB-TV-VideoService
 sonar.organization=fga-eps-mds-1
+
+sonar.host.url=https://sonarcloud.io
+sonar.language=py
 
 sonar.sources=src
 sonar.tests=tests
