--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
-sonar.projectKey=fga-eps-mds_2023.2-UnB-TV-Admin
 sonar.projectKey=fga-eps-mds_2023.2-UnB-TV-VideoService
 sonar.organization=fga-eps-mds-1
 
+sonar.host.url=https://sonarcloud.io
+sonar.language=py
+
 sonar.sources=src
-sonar.tests=tests
-
-sonar.exclusions=__pycache__, tests
-
-sonar.sourceEncoding=UTF-8
-
+sonar.exclusions=tests
 sonar.python.version=3.11.5
 sonar.python.xunit.reportPath=junit.xml
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.coverage.exclusions=tests/*.py
+
+sonar.sourceEncoding=UTF-8
